Replacing one function reference with another no longer leaves behind extra ). Built-in variables are now listed in the menu. Fixed issue where you could not remove function calls in certain senerios. Added stride function, so for loops now do something. Added remaining math functions and constants.

--- a/main.css
+++ b/main.css
@@ -272,10 +272,3 @@ canvas, #modal, #console-output {
   box-sizing: content-box;
   align-self: flex-start;
 }
-
-#console-output {
-  box-sizing: border-box;
-  padding: 0.5em;
-  margin: 0;
-  overflow-y: scroll;
-}
